--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.1.2
   path: ^1.8.3
   flutter_svg: ^2.0.9
+  share_plus: ^7.2.2
 
 dev_dependencies:
   flutter_test:
