--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   path: ^1.8.3
   flutter_svg: ^2.0.9
   share_plus: ^7.2.2
+  bloc: ^8.1.3
+  flutter_bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
