--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   bloc: ^8.1.3
   flutter_bloc: ^8.1.4
   equatable: ^2.0.5
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -79,8 +80,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-  - assets/icons/
-  - assets/images/
+  - assets/icon/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
