--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
         android:label="Money Logger"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
+        android:enableOnBackInvokedCallback="true"
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
