--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   flutter_bloc: ^8.1.4
   equatable: ^2.0.5
   flutter_launcher_icons: ^0.13.1
+  intl: ^0.19.0
+  flutter_datetime_picker: ^1.5.1
+  table_calendar: ^3.1.0
 
 dev_dependencies:
   flutter_test:
