--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   intl: ^0.19.0
   flutter_datetime_picker: ^1.5.1
   table_calendar: ^3.1.0
+  weekly_calendar: ^0.1.2
 
 dev_dependencies:
   flutter_test:
